# SmartHome

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
arduino/bathroom/: CMakeLists.txt  layout.dip  platformio.ini
arduino/bathroom-floor/: CMakeLists.txt  CMakeListsPrivate.txt  platformio.ini
arduino/bathroom-floor/layout/: layout.dip
arduino/bathroom-floor/src/: main.cpp
arduino/bathroom-valve/: CMakeLists.txt  platformio.ini
arduino/bathroom-valve/src/: main.cpp
arduino/bathroom/include/: BathroomDisplay.h
arduino/bathroom/src/: BathroomDisplay.cpp  main.cpp
arduino/cold-chamber/src/: main.cpp
arduino/exmaple/serial/: CMakeLists.txt
arduino/exmaple/sh1106_OLED_128x64/: CMakeLists.txt
arduino/exmaple/src/: main.cpp
arduino/garage/: CMakeLists.txt  platformio.ini
arduino/garage/src/: main.cpp
arduino/gateway/src/: main.cpp
arduino/greenhouse/: CMakeLists.txt  platformio.ini
arduino/greenhouse/layout/: mega.dip
arduino/greenhouse/src/: main.cpp
arduino/main-display/: CMakeLists.txt
arduino/main-display/src/: main.cpp
arduino/outside-temp/: CMakeLists.txt  platformio.ini
arduino/outside-temp/layout/: layout_v2.dip  pro_mini_v1.dip
arduino/outside-temp/src/: main.cpp
arduino/porch/: platformio.ini
arduino/porch/src/: main.cpp
arduino/wardrobe/: platformio.ini
arduino/wardrobe/src/: main.cpp
cold-chamber/: CMakeLists.txt  layout.dip
cold-chamber/src/: main.cpp
esp/christmas-lights/: CMakeLists.txt  platformio.ini
esp/christmas-lights/include/: Timer.h  palettes.h
esp/christmas-lights/src/: main.ino
esp/gateway/: CMakeLists.txt  platformio.ini
esp/gateway/include/: MqttTranslate.h
esp/gateway/src/: main.cpp
exmaple/: CMakeLists.txt
gateway/: CMakeLists.txt
gateway/src/: main.cpp
greenhouse/: CMakeLists.txt
greenhouse/src/: main.cpp
libraries/AnalogReader/src/: AnalogReader.cpp  AnalogReader.h
libraries/BH1750Adapter/src/: BH1750Adapter.cpp  BH1750Adapter.h
libraries/BHLight/src/: BHLight.cpp  BHLight.h
libraries/BME280Adapter/src/: BME280Adapter.cpp  BME280Adapter.h
libraries/BMETempHumPressure/src/: BMETempHumPressure.cpp  BMETempHumPressure.h
libraries/Button/src/: Button.cpp  Button.h  HandlerInterface.cpp  HandlerInterface.h
libraries/Clock/src/: Clock.cpp  Clock.h
libraries/Controller/src/: Controller.cpp  Controller.h
libraries/DHTAdapter/src/: DHTAdapter.cpp  DHTAdapter.h
libraries/U8g2libTools/: to_src.sh
outside-temp/: CMakeLists.txt
outside-temp/layout/: layout.dip  layout_v2.dip
outside-temp/src/: main.cpp
tools/: to_src.sh
www/: .env  .gitignore  composer.json  package.json  webpack.config.js
www/config/: bundles.php  routes.yaml  services.yaml
www/src/: Tcp.php  Ws.php
www/systemd/: smarthome.service
www/templates/: base.html.twig  meteo.html.twig
(+234 files in other folders)
